// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component: Avatar snapshots with default props 1`] = `
<div>
  <button
    accessibility="Foto ou Avatar"
    class="MuiButtonBase-root sc-bczRLJ"
    tabindex="0"
    type="button"
  >
    <div
      class="MuiAvatar-root MuiAvatar-circle sc-gsnTZi"
    >
      <img
        alt=""
        class="MuiAvatar-img"
        src="some_url"
      />
    </div>
    <span
      class="MuiTouchRipple-root"
    />
  </button>
</div>
`;

exports[`Component: Avatar snapshots with other props 1`] = `
<div>
  <button
    accessibility="Foto ou Avatar"
    class="MuiButtonBase-root sc-bczRLJ"
    tabindex="0"
    type="button"
  >
    <div
      class="MuiAvatar-root MuiAvatar-square sc-gsnTZi"
    >
      <img
        alt="alt text"
        class="MuiAvatar-img"
        src="some_url"
      />
    </div>
    <span
      class="MuiTouchRipple-root"
    />
  </button>
</div>
`;
